bdr.BDR.scala.error
Erreur de compilation :
BDR:25: error: not found: value estSurCase
while (estSurCase()) {
       ^